# pyoebase

./: .gitignore  Containerfile  LICENSE  README.md  build.sh  mycode.py  pyproject.toml  run_tests.sh  schema_delta
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish.yml
docs/: ansible.md  concepts.md  index.md  installation.md
docs/api/: db.md  schema.md  sync.md
docs/guides/: parallel-sync.md  schema-sync.md
src/pyoe/: __init__.py  _oe.py  exceptions.py  sync.py
src/pyoe.egg-info/: PKG-INFO  SOURCES.txt
src/pyoe/db/: __init__.py  creator.py
src/pyoe/schema/: __init__.py  applier.py  comparator.py  dumper.py  loader.py
tests/: conftest.py
tests/integration/: conftest.py  test_creator_integration.py  test_main_df_integration.py  test_schema_integration.py
tests/unit/: test_applier.py  test_comparator.py  test_creator.py  test_dumper.py  test_loader.py  test_oe_runner.py  test_sync.py
